--- a/NLP/coursera/1.Classification and Vector Spaces.md
+++ b/NLP/coursera/1.Classification and Vector Spaces.md
@@ -24,7 +24,7 @@
   - [Locality sensitive hashing （位置敏感哈希）](#locality-sensitive-hashing-位置敏感哈希)
     - [一个平面](#一个平面)
     - [多个平面](#多个平面)
-- [近似KNN](#近似knn)
+  - [近似KNN](#近似knn)
 
 
 ## Week1 分类tweets
@@ -43,7 +43,7 @@
 
 为每个单词在postive和nagative中的的次数计数， 如：
 
-![alt text](image-1.png)
+![alt text](afflix/image-1.png)
 
 ### 特征提取
 对于一个tweet，提取3个features
@@ -140,10 +140,10 @@ $$log(\frac{P(pos)}{P(neg)}\prod_{i=1}^{m}\frac{P(w_i|pos)}{P(w_i|neg)})=log(\fr
 两种方式构建词向量
 - word by word
   - 在语料中，统计某个词周围距离<k的词的计数，维度是所有单词的个数
-  ![alt text](image.png)
+  ![alt text](afflix/image.png)
 - word by doc
   - 在语料中，统计某个词在某类语料中出现的计数，维度是所有分类的个数
-![alt text](image-2.png)
+![alt text](afflix/image-2.png)
 
 用词向量空间描述两个词的关系
 
@@ -156,7 +156,7 @@ $$ d(\vec{u}, \vec{v}) = \sqrt{\sum_{i=1}^{n} (\vec{u_i}-\vec{v_i})^2  } = ||\ve
 
 ### 余弦相似度
 
-![alt text](image-3.png)
+![alt text](afflix/image-3.png)
 
 衡量两个向量在方向上的相似度
 
@@ -208,7 +208,7 @@ Locality sensitive hashing is a technique that allows you to hash similar inputs
 #### 一个平面
 对于二维平面的点，每个点看作从原点的一个向量，考虑如何找到一条过原点的直线（下图的虚线），如何将这些向量分在这条直线两侧，先找到它的一个法向量P
 
-![alt text](image4.png)
+![alt text](afflix/image4.png)
 
 这里使用的是 **向量的内积**，数学上点乘，就是
 
@@ -230,7 +230,7 @@ $$h = \sum_{i=1}^{n} 2^i *h_i   (其中 h_i=\begin{cases}
 0 其他
 \end{cases} )$$
 
-## 近似KNN
+### 近似KNN
 由于在整个向量空间中求KNN计数量是非常大的，为了折中，可以考虑在一个范围内计算一个近似的KNN。那如何找近似空间呢？
 可以多次执行下面的算法
   - 随机选择一组平面，把与目标点在一个子空间范围的点都最为目标点的近似
