--- a/NLP/coursera/2.Probabilistic Models.md
+++ b/NLP/coursera/2.Probabilistic Models.md
@@ -10,6 +10,11 @@
     - [2. Find strings n edit distance away](#2-find-strings-n-edit-distance-away)
     - [3. Filter candidates](#3-filter-candidates)
   - [最小编辑距离](#最小编辑距离)
+  - [PA(Autocorrect)](#paautocorrect)
+  - [最短编辑距离的计算](#最短编辑距离的计算)
+- [Week2 Markov Chains and POS Tags](#week2-markov-chains-and-pos-tags)
+  - [Part of speech (POS) tagging](#part-of-speech-pos-tagging)
+  - [Markov chains?](#markov-chains)
 
 
 ## Week1 Autocorrect
@@ -37,3 +42,107 @@
 
 计算最小编辑距离的方法就是DP
 
+### PA(Autocorrect)
+- 预处理
+  - 从语料库获取数据，获取每个单词将其转为小写
+  - 计算每个单词的计数
+  - 计数每个单词的出现频率
+     $P(w_i) = \frac{C(w_i)}{M}$ 
+where $C(w_i)$ is the total number of times $w_i$ appears in the corpus.
+$M$ is the total number of words in the corpus. M中包含重复单词的重复计数
+  - 单词处理（插入/交换相邻/删除/替换），分为一次处理和二次处理
+  - 拼写改正的推荐单词的优先级
+    * If the word is in the vocabulary, suggest the word. 
+    * Otherwise, if there are suggestions from `edit_one_letter` that are in the vocabulary, use those. 
+    * Otherwise, if there are suggestions from `edit_two_letters` that are in the vocabulary, use those. 
+    * Otherwise, suggest the input word.*  
+    * The idea is that words generated from fewer edits are more likely than words with more edits.
+
+### 最短编辑距离的计算
+使用DP来计算，用来衡量纠正后的单词和纠正之前的差距
+``` python
+def min_edit_distance(source, target, ins_cost = 1, del_cost = 1, rep_cost = 2):
+    '''
+    Input: 
+        source: a string corresponding to the string you are starting with
+        target: a string corresponding to the string you want to end with
+        ins_cost: an integer setting the insert cost
+        del_cost: an integer setting the delete cost
+        rep_cost: an integer setting the replace cost
+    Output:
+        D: a matrix of len(source)+1 by len(target)+1 containing minimum edit distances
+        med: the minimum edit distance (med) required to convert the source string to the target
+    '''
+    # use deletion and insert cost as  1
+    m = len(source) 
+    n = len(target) 
+    #initialize cost matrix with zeros and dimensions (m+1,n+1) 
+    D = np.zeros((m+1, n+1), dtype=int) 
+    
+    ### START CODE HERE (Replace instances of 'None' with your code) ###
+    
+    # Fill in column 0, from row 1 to row m, both inclusive
+    for row in range(1,m+1): # Replace None with the proper range
+        D[row,0] = D[row-1,0]+del_cost
+        
+    # Fill in row 0, for all columns from 1 to n, both inclusive
+    for col in range(1,n+1): # Replace None with the proper range
+        D[0,col] = D[0,col-1]+ins_cost
+        
+    # Loop through row 1 to row m, both inclusive
+    for row in range(1,m+1):
+        
+        # Loop through column 1 to column n, both inclusive
+        for col in range(1,n+1):
+            
+            # Intialize r_cost to the 'replace' cost that is passed into this function
+            r_cost = D[row-1,col-1] + (rep_cost if source[row-1]!=target[col-1] else 0)
+            
+            # Update the cost at row, col based on previous entries in the cost matrix
+            # Refer to the equation calculate for D[i,j] (the minimum of three calculated costs)
+            D[row,col] = min(r_cost, D[row-1,col]+del_cost, D[row,col-1]+ins_cost)
+            
+    # Set the minimum edit distance with the cost found at row m, column n 
+    med = D[m,n]
+    
+    ### END CODE HERE ###
+    return D, med
+```
+
+## Week2 Markov Chains and POS Tags
+
+### Part of speech (POS) tagging
+词性标注
+
+对一段文字的每个词进行标注，这些词可能直接来自于字典，或是有字典中的词添加特殊词性的前后缀得来
+
+可以用以上方式对每个词做出一个标注
+
+### Markov chains?
+马尔可夫链（Markov Chain）是一种随机过程模型，描述了系统在离散时间内从一个状态转移到另一个状态的概率。其核心特性是马尔可夫性质，即系统的未来状态仅依赖于当前状态，与过去的状态无关。这种“无记忆性”使得马尔可夫链在概率论、机器学习和数据建模中具有广泛的应用。
+
+
+马尔可夫链由以下要素组成：
+
+- 状态空间：系统可能的所有状态集合。
+
+- 转移概率矩阵：描述从一个状态转移到另一个状态的概率。例如，矩阵中的元素 (P(i, j)) 表示从状态 (i) 转移到状态 (j) 的概率。
+
+- 初始状态分布：系统在初始时刻的状态概率分布。
+
+马尔可夫链的一个重要性质是，当转移概率矩阵满足一定条件时，经过多次状态转移，系统的状态分布会收敛到一个稳定的分布，与初始状态无关。
+
+举例，转移矩阵如下：
+
+一行表示从左侧的状态转移到右侧各个状态的概率，一行之和总为1。$\pi$ 表示初始状态
+![alt text](afflix/image-5.png)
+
+state :
+$Q=\{q_1,q_2,...,q_N\}$
+
+$$ \text{Transition matrix} $$
+$$ {A=\begin{Bmatrix}
+ a_{1,1} & \dots  & a_{1,N}\\
+ \vdots  & \ddots  & \vdots \\
+ a_{N,1} & \dots & a_{N,N}
+\end{Bmatrix}} $$
