--- a/NLP/coursera/1.Classification and Vector Spaces.md
+++ b/NLP/coursera/1.Classification and Vector Spaces.md
@@ -117,7 +117,7 @@ $$log(\frac{P(pos)}{P(neg)}\prod_{i=1}^{m}\frac{P(w_i|pos)}{P(w_i|neg)})=log(\fr
 
 - 收集标注语料库
 - 预处理
-  - owercase
+  - lowercase
   - Remove punctuation, urls, names
   - Remove stop words
   - Stemming
