--- a/NLP/coursera/2.Probabilistic Models.md
+++ b/NLP/coursera/2.Probabilistic Models.md
@@ -1,7 +1,7 @@
 
 
 
-[参考视频](https://www.coursera.org/learn/classification-vector-spaces-in-nlp/)
+[参考视频](https://www.coursera.org/learn/probabilistic-models-in-nlp/)
 
 
 - [Week1 Autocorrect](#week1-autocorrect)
@@ -14,7 +14,10 @@
   - [最短编辑距离的计算](#最短编辑距离的计算)
 - [Week2 Markov Chains and POS Tags](#week2-markov-chains-and-pos-tags)
   - [Part of speech (POS) tagging](#part-of-speech-pos-tagging)
-  - [Markov chains?](#markov-chains)
+  - [Markov chains](#markov-chains)
+  - [隐马尔可夫模型(HMM)](#隐马尔可夫模型hmm)
+  - [计算转移矩阵A](#计算转移矩阵a)
+  - [计算发射矩阵B](#计算发射矩阵b)
 
 
 ## Week1 Autocorrect
@@ -118,7 +121,7 @@ def min_edit_distance(source, target, ins_cost = 1, del_cost = 1, rep_cost = 2):
 
 可以用以上方式对每个词做出一个标注
 
-### Markov chains?
+### Markov chains
 马尔可夫链（Markov Chain）是一种随机过程模型，描述了系统在离散时间内从一个状态转移到另一个状态的概率。其核心特性是马尔可夫性质，即系统的未来状态仅依赖于当前状态，与过去的状态无关。这种“无记忆性”使得马尔可夫链在概率论、机器学习和数据建模中具有广泛的应用。
 
 
@@ -146,3 +149,41 @@ $$ {A=\begin{Bmatrix}
  \vdots  & \ddots  & \vdots \\
  a_{N,1} & \dots & a_{N,N}
 \end{Bmatrix}} $$
+
+### 隐马尔可夫模型(HMM)
+
+HMM 中定义了：
+发射概率（Emission Probability）描述了在特定的隐藏状态下生成观测值的可能性。
+
+在隐马尔可夫模型中，发射概率通常由一个发射矩阵表示，矩阵的行代表隐藏状态，列代表观测值，每个元素表示在特定隐藏状态下观测到特定观测值的概率
+
+以下 going/to/eat 这些是可观测的，而动词/名词这些概念是隐状态
+
+![alt text](afflix/image-6.png)
+
+转移概率(是离散的(Discrete))，只与前一个状态有关\
+$P(q_t|q_{t-1})=P(q_t|q_q,...,q_{t-1},y_1,...,y_{t-1})$
+
+发射概率 (可以是连续的，可以是离散的), 只与前一个隐状态有关\
+$P(y_t|q_t)=P(q_t|q_q,...,q_{t-1},q_t,y_1,...,y_{t-1})$
+
+当发射概率是离散是，可以得到一个发射矩阵
+$$ \text{Transition matrix} $$
+$$ {B=\begin{Bmatrix}
+ b_{1,1} & \dots  & b_{1,V}\\
+ \vdots  & \ddots  & \vdots \\
+ b_{N,1} & \dots & b_{N,V}
+\end{Bmatrix}} $$
+
+### 计算转移矩阵A
+根据语料库，计算转移矩阵的每一项，用如下公式：
+
+- count occurrences of tag pairs  $C(t_{i-1},t_i)$
+- calculate probability  $P(t_i|t_{i-1})=\frac{C(t_{i-1},t_i)+\epsilon}{ {\textstyle \sum_{j=1}^{N}} C(t_{i-1},t_j)+N*\epsilon}$
+
+$\epsilon$ 是一种避免除以0的平滑技术
+
+### 计算发射矩阵B
+方法与计算转移矩阵类似，把每项换成  $C(t_i,w_i)$\
+$P(w_i|t_i)=\frac{C(t_i,w_i)+\epsilon}{ {\textstyle \sum_{j=1}^{V}} C(t_i,w_j)+N*\epsilon}=\frac{C(t_i,w_i)+\epsilon}{ C(t_i)+N*\epsilon}$
+
