--- a/NLP/coursera/2.Probabilistic Models.md
+++ b/NLP/coursera/2.Probabilistic Models.md
@@ -18,6 +18,7 @@
   - [隐马尔可夫模型(HMM)](#隐马尔可夫模型hmm)
   - [计算转移矩阵A](#计算转移矩阵a)
   - [计算发射矩阵B](#计算发射矩阵b)
+  - [Viterbi 算法](#viterbi-算法)
 
 
 ## Week1 Autocorrect
@@ -175,6 +176,8 @@ $$ {B=\begin{Bmatrix}
  b_{N,1} & \dots & b_{N,V}
 \end{Bmatrix}} $$
 
+发射矩阵描述的是，从某个隐状态对应一个观测值的概率。
+
 ### 计算转移矩阵A
 根据语料库，计算转移矩阵的每一项，用如下公式：
 
@@ -187,3 +190,23 @@ $\epsilon$ 是一种避免除以0的平滑技术
 方法与计算转移矩阵类似，把每项换成  $C(t_i,w_i)$\
 $P(w_i|t_i)=\frac{C(t_i,w_i)+\epsilon}{ {\textstyle \sum_{j=1}^{V}} C(t_i,w_j)+N*\epsilon}=\frac{C(t_i,w_i)+\epsilon}{ C(t_i)+N*\epsilon}$
 
+
+### Viterbi 算法
+维特比算法是用DP来解决hmm的预测问题（或解码问题）的，即给定模型 $\lambda=(A,B,\pi)$和观察序列$O=(o_1,o_2,...,o_T)$,求对给定观察序列条件概率$P=(I|O)$最大的状态序列$I=(i_1,i_2,...,i_T)$
+
+预测问题是hmm模型的3个基本问题之一，其他两个课程中没提到，可以参考<<统计学习方法>>。
+
+为了求解这个问题，引入两个辅助矩阵，C和D，它们维度相同，N行（隐状态个数），T列（观测序列个数）。\
+其中$c_{i,j}$ 表示给定模型$\lambda$，当前j项的观察序列为$O=(o_1,o_2,...,o_j)$，第j项的的隐状态为i的最大概率是多少
+$d_{i,j}$表示取到最大值为$c_{i,j}$的路径（从i-1）对应的状态值，即从在第j-1步时，从$d_{i,j}$状态到达第j步的i状态能够达到最大的概率$c_{i,j}$
+
+$$ {C=\begin{Bmatrix}
+c_{1,1} & \dots  &c_{1,T}\\
+ \vdots  & \ddots  & \vdots \\
+c_{N,1} & \dots &c_{N,T}
+\end{Bmatrix}} 
+{D=\begin{Bmatrix}
+d_{1,1} & \dots  &d_{1,T}\\
+ \vdots  & \ddots  & \vdots \\
+d_{N,1} & \dots &d_{N,T}
+\end{Bmatrix}}$$
