--- a/NLP/coursera/2.Probabilistic Models.md
+++ b/NLP/coursera/2.Probabilistic Models.md
@@ -16,8 +16,8 @@
   - [Part of speech (POS) tagging](#part-of-speech-pos-tagging)
   - [Markov chains](#markov-chains)
   - [隐马尔可夫模型(HMM)](#隐马尔可夫模型hmm)
-  - [计算转移矩阵A](#计算转移矩阵a)
-  - [计算发射矩阵B](#计算发射矩阵b)
+  - [计算转移矩阵A(transition matrix)](#计算转移矩阵atransition-matrix)
+  - [计算发射矩阵B(emission matrix)](#计算发射矩阵bemission-matrix)
   - [Viterbi 算法](#viterbi-算法)
 
 
@@ -178,7 +178,7 @@ $$ {B=\begin{Bmatrix}
 
 发射矩阵描述的是，从某个隐状态对应一个观测值的概率。
 
-### 计算转移矩阵A
+### 计算转移矩阵A(transition matrix)
 根据语料库，计算转移矩阵的每一项，用如下公式：
 
 - count occurrences of tag pairs  $C(t_{i-1},t_i)$
@@ -186,18 +186,18 @@ $$ {B=\begin{Bmatrix}
 
 $\epsilon$ 是一种避免除以0的平滑技术
 
-### 计算发射矩阵B
+### 计算发射矩阵B(emission matrix)
 方法与计算转移矩阵类似，把每项换成  $C(t_i,w_i)$\
 $P(w_i|t_i)=\frac{C(t_i,w_i)+\epsilon}{ {\textstyle \sum_{j=1}^{V}} C(t_i,w_j)+N*\epsilon}=\frac{C(t_i,w_i)+\epsilon}{ C(t_i)+N*\epsilon}$
 
 
 ### Viterbi 算法
-维特比算法是用DP来解决hmm的预测问题（或解码问题）的，即给定模型 $\lambda=(A,B,\pi)$和观察序列$O=(o_1,o_2,...,o_T)$,求对给定观察序列条件概率$P=(I|O)$最大的状态序列$I=(i_1,i_2,...,i_T)$
+维特比算法是用DP来解决hmm的预测问题（或称为解码问题）的，即给定模型 $\lambda=(A,B,\pi)$和观察序列$O=(o_1,o_2,...,o_T)$,求对给定观察序列条件概率$P=(I|O)$最大的状态序列$I=(i_1,i_2,...,i_T)$
 
-预测问题是hmm模型的3个基本问题之一，其他两个课程中没提到，可以参考<<统计学习方法>>。
+预测问题是hmm模型的3个基本问题之一，其他两个问题课程中没提到，可以参考<<统计学习方法>>。
 
-为了求解这个问题，引入两个辅助矩阵，C和D，它们维度相同，N行（隐状态个数），T列（观测序列个数）。\
-其中$c_{i,j}$ 表示给定模型$\lambda$，当前j项的观察序列为$O=(o_1,o_2,...,o_j)$，第j项的的隐状态为i的最大概率是多少
+为了求解这个问题，引入两个辅助矩阵，C和D，它们维度相同，都是N行（隐状态个数），T列（观测序列个数）。\
+其中$c_{i,j}$ 表示给定模型$\lambda$，当前j项的观察序列为$O=(o_1,o_2,...,o_j)$，第$j$个观测项的对应的隐状态为$i$的最大概率是多少。\
 $d_{i,j}$表示取到最大值为$c_{i,j}$的路径（从i-1）对应的状态值，即从在第j-1步时，从$d_{i,j}$状态到达第j步的i状态能够达到最大的概率$c_{i,j}$
 
 $$ {C=\begin{Bmatrix}
@@ -210,3 +210,26 @@ d_{1,1} & \dots  &d_{1,T}\\
  \vdots  & \ddots  & \vdots \\
 d_{N,1} & \dots &d_{N,T}
 \end{Bmatrix}}$$
+
+Viterbi 算法分成3步
+1. 初始化
+   
+   计算第一列: \
+    $c_{1,i}=\pi_{i}*b_{i,cindex(w_1)}$， 其中$cindex(w_1)$表示w1对应的观测值的下标 \
+    $d_{1,i}=0，表示前一项都是0（ $\pi$ 状态)
+
+2. 向前递推
+
+    对每个$1\le i\le N$ 和$j\gt 0$
+   
+   $c_{i,j}=\max\limits_{1\le k\le N}c_{k,j-1}\cdot a_{k,i}\cdot b_{i,\mathrm{cindex}(w_j)}$ \
+   $d_{i,j}=\argmax\limits_{1\le k\le N}c_{k,j-1}\cdot a_{k,i}\cdot b_{i,cindex(w_j)}$
+
+3. 向前递推
+   
+    根据D矩阵，从最后一列向前依次递推，获取最大每个i对应的最大概率的隐状态下标
+    ![alt text](afflix/image-7.png)
+
+实际计算过程中使用log函数，避免相乘之后的数值太小，丢失精度
+
+$log(c_{i,j})=\max\limits_{1\le k\le N}log(c_{k,j-1})+ log(a_{k,i}) +log(b_{i,\mathrm{cindex}(w_j)})$
