--- a/NLP/coursera/2.Probabilistic Models.md
+++ b/NLP/coursera/2.Probabilistic Models.md
@@ -19,6 +19,10 @@
   - [计算转移矩阵A(transition matrix)](#计算转移矩阵atransition-matrix)
   - [计算发射矩阵B(emission matrix)](#计算发射矩阵bemission-matrix)
   - [Viterbi 算法](#viterbi-算法)
+- [Week3 Autocomplete and Language Models](#week3-autocomplete-and-language-models)
+  - [N-grams](#n-grams)
+  - [Sequence Probabilities](#sequence-probabilities)
+  - [The N-gram Language Model](#the-n-gram-language-model)
 
 
 ## Week1 Autocorrect
@@ -225,11 +229,67 @@ Viterbi 算法分成3步
    $c_{i,j}=\max\limits_{1\le k\le N}c_{k,j-1}\cdot a_{k,i}\cdot b_{i,\mathrm{cindex}(w_j)}$ \
    $d_{i,j}=\argmax\limits_{1\le k\le N}c_{k,j-1}\cdot a_{k,i}\cdot b_{i,cindex(w_j)}$
 
-3. 向前递推
+3. 反向递推
    
     根据D矩阵，从最后一列向前依次递推，获取最大每个i对应的最大概率的隐状态下标
     ![alt text](afflix/image-7.png)
 
-实际计算过程中使用log函数，避免相乘之后的数值太小，丢失精度
+实际计算过程中使用log函数，避免相乘之后的数值太小而丢失精度
 
 $log(c_{i,j})=\max\limits_{1\le k\le N}log(c_{k,j-1})+ log(a_{k,i}) +log(b_{i,\mathrm{cindex}(w_j)})$
+
+
+## Week3 Autocomplete and Language Models
+
+### N-grams
+
+N-gram是一种基于统计语言模型的算法，用于预测文本中的单词，其中 N  一般指的是序列中的单词数量。其基本思想是将文本内容进行大小为 N 的滑动窗口操作来计算概率。
+
+- N=1：unigram
+- N=2: bigram
+- N=3: trigram
+
+记号： $w_1^m=w_1w_2...w_m$  表示从单词$w_1$到$w_m$这连续的m个单词
+
+unigram的概率 $P(w)=\frac{C(w)}{m}$ \
+bigram的概率 $P(y|x)=\frac{C(xy)}{C(x)}$ 其中 C(x) 表示预料中x出现的次数 \
+trigram的概率 $P(w_3|w_1^2)=\frac{C(w_1^2w_3)}{C(w_1^2)}=\frac{C(w_1^3)}{C(w_1^2)}$ 其中 C(x) 表示预料中x出现的次数
+
+一般的， $P(w_n|w_1^{n-1})=\frac{C(w_1^{n-1}w_N)}{C(w_1^{N-1})}=\frac{C(w_1^N)}{C(w_1^{N-1})}$
+
+
+### Sequence Probabilities
+
+考虑一句话出现的概率，应该等于一组条件概率的乘积，如：
+$\text{P(the teacher drinks tea)=P(the)P(teacher|the)P(drinks|the teacher)P(tea|the teacher drinks)}$，其中$\text{P(tea|the teacher drinks)=P(the teacher drinks tea)/P(the teacher drinks)}$
+
+而当这句话越来越长时，P(the teacher drinks tea)和P(the teacher drinks)都可能为0，使得计算出现问题，此时可以考虑使用近似值$P(tea|\hbox{the teacher drinks})\approx P(tea|drinks)$，这里使用了bigram近似，或者使用其他N-gram做近似处理。
+
+对于一个句子的开头和结尾的处理，可以为语料库的每句话，加上一个开始符 \<s> 和结束符 \</s>
+在实际操作中开始符可能是多个（bigram是一个，trigram是二个...）,结束符只需要一个就够了
+
+\<s> the teacher drinks tea \<\s>
+在bigram下，整句话出现的概率可以表示为 $P(the|\hbox{<s>})P(teacher|the)P(drinks|teacher)P(tea|drinks)P(\hbox{</s>}|tea)$
+
+### The N-gram Language Model
+
+两个矩阵，定义如下，**count matrix** / **probability matrix**
+![alt text](afflix/image-8.png)
+
+![alt text](afflix/image-9.png)
+
+有了概率矩阵，就能做两件事了
+  - 计算一句话出现的概率
+  - 给定一个句子开头，预测 next word
+
+一个句子的概率由下式近似给出
+$$ P(w_1^{n})\approx \prod_{i=1}^{n} P(w_i|w_{i-1})  $$
+计算时，通常使用它的对数形式，避免精度问题
+$$ log(P(w_1^{n}))\approx \sum_{i=1}^{n} log(P(w_i|w_{i-1}))  $$
+
+
+生成时语言模型的基本算法
+1. Choose sentence start
+2. Choose next bigram starting with previous word
+3. Continue until \</s> is picked
+
