--- a/NLP/coursera/2.Probabilistic Models.md
+++ b/NLP/coursera/2.Probabilistic Models.md
@@ -23,6 +23,10 @@
   - [N-grams](#n-grams)
   - [Sequence Probabilities](#sequence-probabilities)
   - [The N-gram Language Model](#the-n-gram-language-model)
+  - [语言模型的评价](#语言模型的评价)
+  - [词汇表之外的词](#词汇表之外的词)
+  - [Smoothing](#smoothing)
+  - [PA(Auto-Complete)](#paauto-complete)
 
 
 ## Week1 Autocorrect
@@ -288,8 +292,74 @@ $$ P(w_1^{n})\approx \prod_{i=1}^{n} P(w_i|w_{i-1})  $$
 $$ log(P(w_1^{n}))\approx \sum_{i=1}^{n} log(P(w_i|w_{i-1}))  $$
 
 
-生成时语言模型的基本算法
+生成式语言模型的基本算法
 1. Choose sentence start
 2. Choose next bigram starting with previous word
 3. Continue until \</s> is picked
+
+
+### 语言模型的评价
+
+划分训练集/验证集/测试集
+
+**困惑度(Perplexity)**
+困惑度有如下定义：
+$$ PP(W) = P(s_1,s_2,...s_m)^{-\frac{1}{m}} $$
+其中W表示测试集包含的所有m个句子s
+m是测试集W中包含的所有词的数量（包含\</s>,不含\<s>）
+
+为何句子的数量和词的数量都是m？？
+
+对于一个句子
+$$ PP(W_i) = \sqrt[m]{\prod_{j=1}^{|s_i|} \frac{1}{P(w_j^{(i)}|w_{j-1}^{(i)})}} $$
+$$ w_j^{(i)} -> \text{ j-th word in i-th sentence} $$
+
+将m个句子合起来，
+$$ PP(W) = \sqrt[m]{\prod_{i=1}^{m}\prod_{j=1}^{|s_i|} \frac{1}{P(w_j^{(i)}|w_{j-1}^{(i)})}} =\sqrt[m]{\prod_{i=1}^{m} \frac{1}{P(w_i|w_{i-1})}}$$
+$$ w_i -> \text{ i-th word in test set} $$
+
+困惑度的log形式
+$$ logPP(W)=-\frac{1}{m}\sum_{i=1}^{m}\log_2(P(w_i|w_{i-1})) $$
+
+**更小困惑度代表更优的模型表现**，大约20~60的困惑度是比较好的模型了。
+
+
+### 词汇表之外的词
+
+
+随着模型规模的不断扩大，出现了一种新的问题：OOV（Out-of-Vocabulary，词汇库外）问题。OOV问题是指模型在处理文本数据时，遇到了未在词汇库中出现过的词汇，导致模型无法理解这些词汇，从而影响了模型的性能。
+
+对于这些词，我们在语料库中，将其替换为一个特殊的Tag: **\<UNK>**
+- 创建一个单词表V
+- 替换调corpus中不在V的所有单词为\<UNK>
+- 计算\<UNK>与其他单词的相关概率
+
+如何选择单词表，可以有两种原则：
+- 制定一个最小频率，在corpus中的词的频率需要达到一个数值，才能放入单词表
+- 制定|V|的最大值，优先选择频率大的单词放入
+
+### Smoothing
+训练集中，在计算条件概率中可能会出现分母为0的场景，如：N-grams made of known words still might be missing in the training corpus
+$$ P(w_n|w_{n-N+1}^{n-1})=\frac{C(w_{n-N+1}^{n-1},w_N)}{C(w_{n-N+1}^{N-1})} $$
+此式子右边分子分母都可能为0，同样在处理时引入Laplacian smoothing
+
+- Add-one smoothing
+$$ P(w_n|w_{n-1})=\frac{C(w_{n-1},w_n) + 1}{\sum_{w\in V}(C(w_{n-1},w) + 1)}=\frac{C(w_{n-1},w_n) + 1}{C(w_{n-1}) + V} $$
+
+- Add-k smoothing
+$$ P(w_n|w_{n-1})=\frac{C(w_{n-1},w_n) + k}{\sum_{w\in V}(C(w_{n-1},w) + k)}=\frac{C(w_{n-1},w_n) + k}{C(w_{n-1}) + kV} $$
+
+另外两种smoothing的方法：
+backoff/插值
+
+### PA(Auto-Complete)
+
+- 预处理数据
+  * 切分句子
+  * tokenize (nltk.word_tokenize)
+  * 所有单词计数
+  * 按单词频率超过n的单词构造单词表
+  * 替换非单词表的单词为unk
+  * 切分数据集为训练集和测试集
+      * 其中单词频率和选择是在训练集上进行的，但单词替换是对训练集+测试集
 
