--- a/NLP/coursera/2.Probabilistic Models.md
+++ b/NLP/coursera/2.Probabilistic Models.md
@@ -27,6 +27,12 @@
   - [词汇表之外的词](#词汇表之外的词)
   - [Smoothing](#smoothing)
   - [PA(Auto-Complete)](#paauto-complete)
+- [Word embedding](#word-embedding)
+  - [CBOW (Continuous Bag-of-Words Model)](#cbow-continuous-bag-of-words-model)
+  - [Data preparation](#data-preparation)
+  - [训练模型](#训练模型)
+  - [获取词嵌入向量](#获取词嵌入向量)
+  - [词向量的评估](#词向量的评估)
 
 
 ## Week1 Autocorrect
@@ -340,13 +346,17 @@ $$ logPP(W)=-\frac{1}{m}\sum_{i=1}^{m}\log_2(P(w_i|w_{i-1})) $$
 
 ### Smoothing
 训练集中，在计算条件概率中可能会出现分母为0的场景，如：N-grams made of known words still might be missing in the training corpus
+
 $$ P(w_n|w_{n-N+1}^{n-1})=\frac{C(w_{n-N+1}^{n-1},w_N)}{C(w_{n-N+1}^{N-1})} $$
+
 此式子右边分子分母都可能为0，同样在处理时引入Laplacian smoothing
 
 - Add-one smoothing
+  
 $$ P(w_n|w_{n-1})=\frac{C(w_{n-1},w_n) + 1}{\sum_{w\in V}(C(w_{n-1},w) + 1)}=\frac{C(w_{n-1},w_n) + 1}{C(w_{n-1}) + V} $$
 
 - Add-k smoothing
+  
 $$ P(w_n|w_{n-1})=\frac{C(w_{n-1},w_n) + k}{\sum_{w\in V}(C(w_{n-1},w) + k)}=\frac{C(w_{n-1},w_n) + k}{C(w_{n-1}) + kV} $$
 
 另外两种smoothing的方法：
@@ -362,4 +372,186 @@ backoff/插值
   * 替换非单词表的单词为unk
   * 切分数据集为训练集和测试集
       * 其中单词频率和选择是在训练集上进行的，但单词替换是对训练集+测试集
+- 按照 Add-k smoothing 计算 $P(w_n|w_{n-1})$
+- 评估模型，计算困惑度
+- 计算补全的词，从概率最高的单词：
+
+```python
+def suggest_a_word(previous_tokens, n_gram_counts, n_plus1_gram_counts, vocabulary, end_token='<e>', unknown_token="<unk>", k=1.0, start_with=None):
+    """
+    Get suggestion for the next word
+    
+    Args:
+        previous_tokens: The sentence you input where each token is a word. Must have length >= n 
+        n_gram_counts: Dictionary of counts of n-grams
+        n_plus1_gram_counts: Dictionary of counts of (n+1)-grams
+        vocabulary: List of words
+        k: positive constant, smoothing parameter
+        start_with: If not None, specifies the first few letters of the next word
+        
+    Returns:
+        A tuple of 
+          - string of the most likely next word
+          - corresponding probability
+    """
+    
+    # length of previous words
+    n = len(list(n_gram_counts.keys())[0])
+    
+    # append "start token" on "previous_tokens"
+    previous_tokens = ['<s>'] * n + previous_tokens
+    
+    # From the words that the user already typed
+    # get the most recent 'n' words as the previous n-gram
+    previous_n_gram = previous_tokens[-n:]
+
+    # Estimate the probabilities that each word in the vocabulary
+    # is the next word,
+    # given the previous n-gram, the dictionary of n-gram counts,
+    # the dictionary of n plus 1 gram counts, and the smoothing constant
+    probabilities = estimate_probabilities(previous_n_gram,
+                                           n_gram_counts, n_plus1_gram_counts,
+                                           vocabulary, k=k)
+    
+    # Initialize suggested word to None
+    # This will be set to the word with highest probability
+    suggestion = None
+    
+    # Initialize the highest word probability to 0
+    # this will be set to the highest probability 
+    # of all words to be suggested
+    max_prob = 0
+    
+    ### START CODE HERE ###
+    
+    # For each word and its probability in the probabilities dictionary:
+    for word, prob in probabilities.items(): # complete this line
+        
+        # If the optional start_with string is set
+        if start_with: # complete this line with the proper condition
+            
+            # Check if the beginning of word does not match with the letters in 'start_with'
+            if not word.startswith(start_with): # complete this line with the proper condition
+
+                # if they don't match, skip this word (move onto the next word)
+                continue
+        
+        # Check if this word's probability
+        # is greater than the current maximum probability
+        if prob > max_prob: # complete this line with the proper condition
+            
+            # If so, save this word as the best suggestion (so far)
+            suggestion = word
+            
+            # Save the new maximum probability
+            max_prob = prob
+
+    ### END CODE HERE
+    
+    return suggestion, max_prob
+```
+
+## Word embedding
+
+词表示的方法
+- integers 不能体现词之间的内在关系
+- one hot vectors  不能体现词之间的内在关系，向量空间太大
+- word embeddings
+
+一些基础的word embedding方法
+- word2vec(Google)
+- GloVe(Stanford)
+- fastText(Fackbook)
+
+一些高级的word embedding方法
+- BERT (Google)
+- ELMo
+- GPT
+
+
+### CBOW (Continuous Bag-of-Words Model)
+
+CBOW的基本思想是，给定一个单词的上下文（即窗口内的其他单词），预测该单词本身。例如，对于句子“The cat climbed up the tree”，如果窗口大小为5，那么当中心单词为“climbed”时，上下文单词为“The”、“cat”、“up”和“the”。CBOW模型要求根据这四个上下文单词，计算出“climbed”的概率分布。
+
+### Data preparation
+- Cleaning and tokenization 
+  - 大小写转换，标点处理，特殊字符的处理
+- Sliding window of words
+  - 通过滑窗技巧，提取出每个中心词和滑窗中周围的词
+  
+```python
+# Define the 'get_windows' function
+# C 是窗口中单词的数量
+def get_windows(words, C):
+    i = C
+    while i < len(words) - C:
+        center_word = words[i]
+        context_words = words[(i - C):i] + words[(i+1):(i+C+1)]
+        yield context_words, center_word
+        i += 1
+```
+- Transforming words into vectors for the training set
+  - 把训练集中的词都转成one-hot word vectors
+    - 中心词是一个单独的 one-hot word vectors
+    - 周围词是把周围词的 one-hot word vectors 都加起来做平均
+```
+效果大概这样：
+Context words vector:  [0.25 0.25 0.   0.5  0.  ]
+Center word vector:  [0. 0. 1. 0. 0.]
+
+Context words vector:  [0.5  0.   0.25 0.25 0.  ]
+Center word vector:  [0. 1. 0. 0. 0.]
+
+Context words vector:  [0.25 0.25 0.25 0.   0.25]
+Center word vector:  [0. 0. 0. 1. 0.]
+```
+
+### 训练模型
+模型是一个3层的全连接神经网络，输入就是上面计算出来的Context words vector，输出层的期望是Center word vector，两个激活函数分别是Relu和softmax, 如下图：
+
+![alt text](afflix/image-10.png)
+
+批量训练的版本为：
+![alt text](afflix/image-11.png)
+
+损失函数，使用交叉熵损失函数
+
+训练的过程就是普通的神经网络训练方式：方向传播 + 梯度下降的方式
+
+
+### 获取词嵌入向量
+根据上面的模型计算出一组神经网络的参数 $[W_1,b_1,W_2,b_2]$ \
+如何根据这种参数生成词嵌入向量呢？有三种方式:
+- $W_1$
+- $W_2$
+- $0.5(W_1+W_2^T)$
+
+![alt text](afflix/image-12.png)
+![alt text](afflix/image-13.png)
+![alt text](afflix/image-14.png)
+
+### 词向量的评估
+Intrinsic 和 Extrinsic 通常指两种不同的评估方式
+
+- Intrinsic（内在评估）
+
+   - 目标：直接、独立地评估词向量本身的质量，不依赖具体下游任务。
+   - 常见方法：
+     - 词语相似度/相关性数据集（如 WordSim-353、SimLex-999、MEN）：计算词向量的余弦相似度，与人工标     - 注的相似度做相关性（Spearman/Pearson）。
+     - 类比任务（Mikolov analogies，例如 king - man + woman ≈ queen）：测试向量空间的几何结构是否     - 表达语义/语法规律。
+     - 最近邻检查、聚类纯度、语义类别一致性。
+     - 语言学 probing（例如利用线性分类器探测是否编码了词性、形态信息）。
+   - 优点：快速、成本低、可控变量多（可以只比较嵌入差异）。
+   - 局限：与实际任务表现不一定强相关；可能受评测集题型偏好影响（如过度重视几何线性性质）。
+
+ - Extrinsic（外在评估）
+    - 目标：把词向量用于真实的下游任务，观察对任务性能的影响。
+    - 常见任务：
+      - 文本分类、情感分析
+      - 序列标注（NER、POS 标注）
+      - 机器翻译、问答、信息检索
+   - 实践方式：
+    将 CBOW 词向量作为特征输入下游模型（可选择冻结或微调），比较不同嵌入对最终指标（准确率、F1、BLEU 等）的影响。
+    - 优点：直接反映对业务或应用的价值，综合考虑与数据分布、模型结构的互动。
+   - 局限：成本高、变量多（模型结构、训练策略、数据规模等），难以隔离“词向量本身”的贡献。
 
